<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="14dp"
    android:background="@color/blue_grey_800"
    android:id="@+id/content_entry"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" >
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/cc_white"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/item_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/item_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="12"
                    android:hint="@string/entry_food_name"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/item_quantity_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/item_quantity_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/entry_food_quantity"
                        android:inputType="number"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/item_select_category"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="36dp"
                android:background="?attr/selectableItemBackground"
                android:text="@string/entry_selectable_category"
                android:textColor="@color/colorAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_weight="0.5"
                        android:orientation="vertical"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/entry_expiration_date" />

                        <TextView
                            android:id="@+id/item_date_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="16dp"
                            android:layout_weight="1"
                            android:text="@string/entry_selectable_date" />

                    </LinearLayout>

                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/item_date_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:background="?attr/selectableItemBackground"
                        android:padding="32dp"
                        android:src="@drawable/ic_date_range_white_36dp"
                        android:tint="@color/colorAccent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- this particular LinearLayout is used to center the text -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_weight="0.5"
                        android:orientation="vertical"
                        android:weightSum="2">

                        <com.parse.ParseImageView
                            android:id="@+id/entry_thumbnail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/item_thumbnail_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/entry_selectable_thumbnail" />

                    </LinearLayout>

                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/item_camera_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:background="?attr/selectableItemBackground"
                        android:padding="32dp"
                        android:src="@drawable/ic_photo_camera_white_36dp"
                        android:tint="@color/colorAccent" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>