<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/category_swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_grey_600">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/category_list"
        android:name="edu.fe.CategoryListFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        app:layoutManager="GridLayoutManager"
        app:paddingStart="2dp"
        app:paddingEnd="2dp"
        tools:context="edu.fe.CategoryListFragment"
        tools:listitem="@layout/entity_category" />

</FrameLayout>